--- a/css/add_course.css
+++ b/css/add_course.css
@@ -93,40 +93,6 @@ input:focus, select:focus, textarea:focus {
 }
 
 
-/* ... File Input Styling ... */
-
-/* Hide the default file input */
-input[type="file"] {
-    display: none;
-}
-
-/* Style the label to look like a button */
-label[for="course_image"] {
-    display: inline-block;
-    color: #0e008d;
-    width: 280px;
-    height: 50px;
-    padding: 0 20px;
-    background: #fff;
-    border-radius: 5px;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    text-align: center;
-    transition: all 0.2s linear;
-    margin: 7% auto;
-    letter-spacing: 0.05em;
-    line-height: 50px; /* Align the text vertically */
-}
-
-/* Style the label on hover */
-label[for="course_image"]:hover {
-    transform: translatey(3px);
-    box-shadow: none;
-    animation: ani9 0.4s ease-in-out infinite alternate;
-    background-color: #00f7ff;
-    color: #0004ff;
-}
 
 
 
@@ -183,6 +149,43 @@ input.add-course-btn:hover {
     animation: ani9 0.4s ease-in-out infinite alternate;
     background-color: #a221ec;
     color: #00ffea;
+}
+
+
+
+/* ... File Input Styling ... */
+
+/* Hide the default file input */
+input[type="file"] {
+    display: none;
+}
+
+/* Style the label to look like a button */
+label[for="image"] {
+    display: inline-block;
+    color: #0e008d;
+    width: 280px;
+    height: 50px;
+    padding: 0 20px;
+    background: #fff;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s linear;
+    margin: 7% auto;
+    letter-spacing: 0.05em;
+    line-height: 50px; /* Align the text vertically */
+}
+
+/* Style the label on hover */
+label[for="image"]:hover {
+    transform: translatey(3px);
+    box-shadow: none;
+    animation: ani9 0.4s ease-in-out infinite alternate;
+    background-color: #00f7ff;
+    color: #0004ff;
 }
 
 
