--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    position: relative;
+    padding-top: 70px;
 }
 
 .header-container {
@@ -12,19 +14,21 @@ body {
     padding: 10px;
     background-color: #4A47A3;
     color: #fff;
-    position: sticky;
     top: 0;
     z-index: 1000;
+    position: fixed;
+    width: 97%;
 }
 
 .header-logo img {
     height: 70px;
+    margin-left: 20px;
 }
 
 .menu {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 30px;
 }
 
 .menu li a {
@@ -58,8 +62,9 @@ body {
         top: 60%;
         right: 0;
         background-color: #4A47A3;
-        width: 90%;
+        width: 95%;
         padding: 20px;
+        padding-left: 10px;
         gap: 10px;
     }
 }
