--- a/css/category.css
+++ b/css/category.css
@@ -30,8 +30,8 @@ body {
 /* Styling for lists and links */
 .category-content ul {
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 10;
+    margin: 10;
     display: flex; 
     flex-wrap: wrap; 
     justify-content: space-between; 
@@ -40,7 +40,7 @@ body {
 .category-content li {
     background-color: #f8f9fa; 
     padding: 20px;
-    margin: 10px 0; 
+    margin: 10px 10px; 
     border: 1px solid #007BFF; 
     border-radius: 4px;
     flex: 1 0 21%;
