--- a/css/header.css
+++ b/css/header.css
@@ -17,11 +17,11 @@ body {
     top: 0;
     z-index: 1000;
     position: fixed;
-    width: 97%;
+    width: 98%;
 }
 
 .header-logo img {
-    height: 70px;
+    height: 60px;
     margin-left: 20px;
 }
 
@@ -41,6 +41,13 @@ body {
     color: #ddd;
 }
 
+.header-title{
+    color:lightpink;
+}
+
+.mobile-menu-toggle {
+    display: none;
+}
 @media (max-width: 768px) {
     .menu {
         display: none;
@@ -49,7 +56,7 @@ body {
     .mobile-menu-toggle {
         display: block;
         margin-right: 20px; 
-        font-size: 240px;
+        font-size: 40px;
     }
 
     .menu.active {
